type definitions and rotm

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,9 +1,12 @@
 name: tests
 
-on: [push]
+on: 
+  push:
+      branches:
+          - main
 
 jobs:
-  no_ext_tests:
+  tests:
     runs-on: ubuntu-22.04
 
     strategy:
@@ -20,6 +23,12 @@ jobs:
         with:
           php_version: ${{ matrix.php }}
           php_extensions: ffi
+
+      - name: PHP Static Analysys
+        uses: php-actions/phpstan@v3
+        with:
+          php_version: ${{ matrix.php }}
+          path: src/
 
       - name: PHPUnit Tests
         uses: php-actions/phpunit@v3
