--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,34 +7,70 @@ on:
 
 jobs:
   tests:
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: true
       matrix:
-        php: ['8.1','8.2','8.3']
+        include:
+          - name: PHP8.1
+            os: ubuntu-latest
+            php: '8.1'
+            phpunit: '10.5'
+          - name: PHP8.3
+            os: ubuntu-latest
+            php: '8.3'
+            phpunit: '11.5'
+          - name: PHP8.4
+            os: ubuntu-latest
+            php: '8.4'
+            phpunit: '11.5'
   
     steps:
+      - name: Setup PHP ${{ matrix.php }}
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          # PHP Extras
+          coverage: none
+          tools: composer, phpunit:${{ matrix.phpunit }}, phpstan
+          #ini-values: "memory_limit=512M"
+          extensions: ffi
+
+      #- name: Install OpenBLAS
+      #  run: |
+      #    sudo apt install -y clinfo
+      #    sudo apt install -y pocl-opencl-icd
+
       - name: Checkout codes
         uses: "actions/checkout@v4"
 
+      #- name: Composer
+      #  uses: php-actions/composer@v6
+      #  with:
+      #    php_version: ${{ matrix.php }}
+      #    php_extensions: ffi
+
       - name: Composer
-        uses: php-actions/composer@v6
-        with:
-          php_version: ${{ matrix.php }}
-          php_extensions: ffi
+        run: composer update
+
+      #- name: PHP Static Analysys
+      #  uses: php-actions/phpstan@v3
+      #  with:
+      #    php_version: ${{ matrix.php }}
+      #    path: src/
 
       - name: PHP Static Analysys
-        uses: php-actions/phpstan@v3
-        with:
-          php_version: ${{ matrix.php }}
-          path: src/
+        run: phpstan
+
+      #- name: PHPUnit Tests
+      #  uses: php-actions/phpunit@v3
+      #  with:
+      #    configuration: tests/phpunit.xml
+      #    version: ${{ matrix.phpunit }}
+      #    php_version: ${{ matrix.php }}
+      #    filter: ReleaseTest
 
       - name: PHPUnit Tests
-        uses: php-actions/phpunit@v3
-        with:
-          configuration: tests/phpunit.xml
-          version: 10.5
-          php_version: ${{ matrix.php }}
-          filter: ReleaseTest
+        run: phpunit -c tests --filter ReleaseTest
 
