--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,13 @@
     "require": {
         "php": "^8.1",
         "interop-phpobjects/polite-math": "~1.0.7",
-        "rindow/rindow-opencl-ffi": "~1.0.0"
+        "rindow/rindow-opencl-ffi": "^1.0"
     },
     "require-dev": {
         "ext-ffi": "*",
-        "rindow/rindow-math-buffer-ffi": ">=1.0.0",
-        "rindow/rindow-openblas-ffi": ">=1.0.0",
-        "rindow/rindow-matlib-ffi": ">=1.0.0"
+        "rindow/rindow-math-buffer-ffi": "^1.0",
+        "rindow/rindow-openblas-ffi": "^1.0",
+        "rindow/rindow-matlib-ffi": "^1.0"
     },
     "autoload": {
         "psr-4": {
